morty migration: meta-digi-dey: update DEY distro config
https://jira.digi.com/browse/DEL-3451

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,7 +1,7 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
-DISTRO_VERSION = "2.0-r6"
-DISTRO_CODENAME = "jethro"
+DISTRO_VERSION = "2.2-r1"
+DISTRO_CODENAME = "morty"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'}"
 
@@ -10,6 +10,9 @@ MAINTAINER = "Digi Support <support@digi.com>"
 TARGET_VENDOR = "-dey"
 
 LOCALCONF_VERSION = "1"
+
+DISTRO_VERSION[vardepsexclude] = "DATE"
+SDK_VERSION[vardepsexclude] = "DATE"
 
 # Override these in poky based distros
 POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland bluez5 cellular"
@@ -45,13 +48,13 @@ FEATURE_PACKAGES_dey-wireless = "packagegroup-dey-wireless"
 PREFERRED_PROVIDER_jpeg ?= "jpeg"
 PREFERRED_PROVIDER_jpeg_armv7a ?= "libjpeg-turbo"
 
-PREFERRED_VERSION_linux-yocto ?= "4.1%"
-PREFERRED_VERSION_linux-yocto_qemux86 ?= "4.1%"
-PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "4.1%"
-PREFERRED_VERSION_linux-yocto_qemuarm ?= "4.1%"
-PREFERRED_VERSION_linux-yocto_qemumips ?= "4.1%"
-PREFERRED_VERSION_linux-yocto_qemumips64 ?= "4.1%"
-PREFERRED_VERSION_linux-yocto_qemuppc ?= "4.1%"
+PREFERRED_VERSION_linux-yocto ?= "4.8%"
+PREFERRED_VERSION_linux-yocto_qemux86 ?= "4.8%"
+PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "4.8%"
+PREFERRED_VERSION_linux-yocto_qemuarm ?= "4.8%"
+PREFERRED_VERSION_linux-yocto_qemumips ?= "4.8%"
+PREFERRED_VERSION_linux-yocto_qemumips64 ?= "4.8%"
+PREFERRED_VERSION_linux-yocto_qemuppc ?= "4.8%"
 
 # Use swupdate version 2016.10
 PREFERRED_VERSION_swupdate = "2016.10+git%"
@@ -101,24 +104,24 @@ https://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n"
 CONNECTIVITY_CHECK_URIS ?= "https://www.example.com/"
 
 SANITY_TESTED_DISTROS ?= " \
-            poky-1.7 \n \
             poky-1.8 \n \
             poky-2.0 \n \
+            poky-2.1 \n \
+            poky-2.2 \n \
             Ubuntu-14.04 \n \
             Ubuntu-14.10 \n \
             Ubuntu-15.04 \n \
             Ubuntu-15.10 \n \
-            Fedora-21 \n \
+            Ubuntu-16.04 \n \
             Fedora-22 \n \
-            CentOS-6.* \n \
-            CentOS-7.* \n \
-            Debian-7.* \n \
+            Fedora-23 \n \
+            Fedora-24 \n \
+            CentOSLinux-7.* \n \
             Debian-8.* \n \
-            openSUSE-project-13.2 \n \
+            openSUSE-13.2 \n \
+            SUSELINUX-42.1 \n \
             "
 
-# Default hash policy for distro
-BB_SIGNATURE_HANDLER ?= 'OEBasicHash'
 #
 # OELAYOUT_ABI allows us to notify users when the format of TMPDIR changes in
 # an incompatible way. Such changes should usually be detailed in the commit
@@ -137,5 +140,10 @@ WARN_TO_ERROR_QA = "already-stripped compile-host-path install-host-path \
 WARN_QA_remove = "${WARN_TO_ERROR_QA}"
 ERROR_QA_append = " ${WARN_TO_ERROR_QA}"
 
-# DEY distro blacklisted recipes
-PNBLACKLIST[adt-installer] = "[DEY not supported] adt-installer hardcodes distro version in URL paths. DEY versioning is incompatible."
+require conf/distro/include/poky-world-exclude.inc
+require conf/distro/include/no-static-libs.inc
+require conf/distro/include/yocto-uninative.inc
+INHERIT += "uninative"
+
+# Enable removal of libtool '*.la' files (this is the default starting in 2.3)
+INHERIT += "remove-libtool"
