conf: machine: use weak assignment for SERIAL_CONSOLES
This allows to override the console using the local.conf.

https://jira.digi.com/browse/DEL-2856

Signed-off-by: Diaz de Grenu, Jose <Jose.DiazdeGrenu@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -11,7 +11,7 @@ UBOOT_CONFIG[ccardimx28js] = "ccardimx28js_config"
 KERNEL_DEVICETREE = "imx28-${MACHINE}.dtb"
 
 # Serial console
-SERIAL_CONSOLES = "115200;ttyAMA0"
+SERIAL_CONSOLES ?= "115200;ttyAMA0"
 
 # Bluetooth tty
 BT_TTY ?= "ttyAPP0"
