--- a/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
@@ -16,7 +16,7 @@ KERNEL_DEVICETREE ?= " \
     imx6ul-ccimx6ulsbc-id135.dtb \
 "
 
-SERIAL_CONSOLES = "115200;ttymxc4"
+SERIAL_CONSOLES ?= "115200;ttymxc4"
 
 MACHINE_FEATURES += "second-eth"
 
