--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -16,7 +16,7 @@ KERNEL_DEVICETREE ?= " \
     imx6ul-ccimx6ulstarter-id129.dtb \
 "
 
-SERIAL_CONSOLES = "115200;ttymxc4"
+SERIAL_CONSOLES ?= "115200;ttymxc4"
 
 # Bluetooth tty
 BT_TTY ?= "ttymxc0"
