meta-digi: change Freescale references to NXP
Mostly in config templates and readme files.

https://jira.digi.com/browse/DEL-3263

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/sdk/config/ccimx6sbc/local.conf.sample
+++ b/sdk/config/ccimx6sbc/local.conf.sample
@@ -250,6 +250,6 @@ CONF_VERSION = "1"
 PRSERV_HOST = "localhost:0"
 
 #
-# Some libraries and packages are covered by Freescale EULA
+# Some libraries and packages are covered by NXP EULA
 #
 #ACCEPT_FSL_EULA = "1"
