--- a/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
@@ -7,7 +7,8 @@ include conf/machine/include/ccimx6ul.inc
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG ??= "ccimx6ulsbc"
+UBOOT_CONFIG ??= "ccimx6ulsbc1GB ccimx6ulsbc"
+UBOOT_CONFIG[ccimx6ulsbc1GB] = "ccimx6ulsbc1GB_defconfig"
 UBOOT_CONFIG[ccimx6ulsbc] = "ccimx6ulsbc_defconfig"
 
 KERNEL_DEVICETREE ?= " \
