--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -7,7 +7,8 @@ include conf/machine/include/ccimx6ul.inc
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG ??= "ccimx6ulstarter"
+UBOOT_CONFIG ??= "ccimx6ulstarter1GB ccimx6ulstarter"
+UBOOT_CONFIG[ccimx6ulstarter1GB] = "ccimx6ulstarter1GB_defconfig"
 UBOOT_CONFIG[ccimx6ulstarter] = "ccimx6ulstarter_defconfig"
 
 KERNEL_DEVICETREE ?= " \
