hostapd: parametrize hostapd init script per interface
The original init script hardcodes the configuration file to use so it
cannot be re-utilized for concurrent AP/AP mode where two interfaces can
be used as SoftAP.

This commit uses the variable ${IFACE} to:
- select a specific configuration file per interface:
  /etc/hostapd_${IFACE}.conf
- create a specific PID file per interface:
  /var/run/hostapd.${IFACE}.pid

With this, the /etc/network/interfaces can use the script for using SoftAP
in different wireless interfaces.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-dey/recipes-connectivity/hostapd/hostapd/ccimx6ul/hostapd_wlan1.conf
+++ b/meta-digi-dey/recipes-connectivity/hostapd/hostapd/ccimx6ul/hostapd_wlan1.conf
@@ -4,7 +4,7 @@ interface=wlan1
 driver=nl80211
 
 # WPA2-AES encryption
-ssid=ap-wpa2aes_a
+ssid=ap-wlan1-wpa2aes_a
 auth_algs=1
 wpa=2
 wpa_key_mgmt=WPA-PSK
