layer.conf: add custom-licenses folder
Signed-off-by: Diaz de Grenu, Jose <Jose.DiazdeGrenu@digi.com>

--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -21,6 +21,9 @@ LAYERDEPENDS_digi-dey += "openembedded-layer networking-layer webserver qt5-laye
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
+# Additional license directories
+LICENSE_PATH += "${LAYERDIR}/custom-licenses"
+
 # Digi mirror for packages vanished upstream
 DIGI_MIRROR ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/mirror/"
 MIRRORS += "\
