u-boot-fw-utils: dynamically create fw_env.config for NAND-based platforms
A mechanism was introduced in U-Boot to dynamically locate the environment
copies within a NAND partition, skipping bad blocks and making full use of
the partition blocks.
To trigger this mechanism in Linux tools (fw_printenv/fw_setenv) the
configuration file /etc/fw_env.config must have both copies entries
pointing to the same offset.

This commit substitutes the hardcoded configuration file for CC6UL with a
stub and generates one on an RPM post-script basing on:

- Supplied DEY variables (with default values per platform):
  - UBOOT_ENV_OFFSET: starting offset of the environment within the
    partition.
  - UBOOT_ENV_SIZE: size of each copy of the environment.
  - UBOOT_ENV_RANGE: size in the partition that the environment copies may
    occupy, starting from UBOOT_ENV_OFFSET. If undefined, the whole
    partition is used.

- Calculated values:
  - NAND Erase block size
  - Number of blocks available for the environment copies

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

https://jira.digi.com/browse/DEL-4256

--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -11,6 +11,15 @@ UBOOT_CONFIG ??= "ccimx6ulstarter1GB ccimx6ulstarter"
 UBOOT_CONFIG[ccimx6ulstarter1GB] = "ccimx6ulstarter1GB_defconfig"
 UBOOT_CONFIG[ccimx6ulstarter] = "ccimx6ulstarter_defconfig"
 
+# U-Boot environment offset (within partition)
+UBOOT_ENV_OFFSET ?= "0x0"
+# U-Boot environment size
+UBOOT_ENV_SIZE ?= "0x20000"
+# U-Boot environment range: size (in hex) in the environment partition that
+# the U-Boot environment can take up (if undefined, it will take up all the
+# available space in the environment partition)
+UBOOT_ENV_RANGE ?= ""
+
 KERNEL_DEVICETREE ?= " \
     imx6ul-ccimx6ulstarter.dtb \
     imx6ul-ccimx6ulstarter-wb.dtb \
