--- a/meta-digi-arm/recipes-bsp/u-boot/u-boot-fw-utils/ccimx6ul/fw_env.config
+++ b/meta-digi-arm/recipes-bsp/u-boot/u-boot-fw-utils/ccimx6ul/fw_env.config
@@ -1,7 +1,9 @@
 # Configuration file for fw_(printenv/setenv) utility.
 # Up to two entries are valid, in this case the redundant
 # environment sector is assumed present.
+# If both copies are set to the same offset, an automatic mechanism will
+# determine the first good sectors where each copy lives, skipping bad blocks.
 
-# Device name        Offset	 Size
-/dev/mtd1            0x0         0x20000
-/dev/mtd1            0x20000     0x20000
+# Device name    Offset   Size       Erase-size    No.Blocks
+/dev/##MTDINDEX##        ##ENV_OFFSET##      ##ENV_SIZE##    ##ERASEBLOCK##       ##NBLOCKS##
+/dev/##MTDINDEX##        ##ENV_REDUND_OFFSET##      ##ENV_SIZE##    ##ERASEBLOCK##       ##NBLOCKS##
