aws-iot-sdk: remove the samples provided by Amazon
We have our own AWS IoT Device SDK demo application.

https://jira.digi.com/browse/DEL-4339

Signed-off-by: Tatiana Leon <tatiana.leon@digi.com>

--- a/meta-digi-dey/recipes-aws/awsiotsdk-c/awsiotsdk-c-2.1.1/Makefile
+++ b/meta-digi-dey/recipes-aws/awsiotsdk-c/awsiotsdk-c-2.1.1/Makefile
@@ -17,19 +17,9 @@
 #
 # ***************************************************************************
 
-SAMPLES_SUBDIR := samples/linux
-
-EXAMPLES := $(SAMPLES_SUBDIR)/shadow_sample \
-            $(SAMPLES_SUBDIR)/shadow_sample_console_echo \
-            $(SAMPLES_SUBDIR)/subscribe_publish_sample
-
-SUBDIRS := src $(EXAMPLES)
+SUBDIRS := src
 
 all: $(SUBDIRS)
-
-$(SAMPLES_SUBDIR)/shadow_sample: src
-$(SAMPLES_SUBDIR)/shadow_sample_console_echo: src
-$(SAMPLES_SUBDIR)/subscribe_publish_sample: src
 
 .PHONY: $(SUBDIRS)
 $(SUBDIRS):
