dey-examples-opengles: add LDFLAGS and clean target
This avoids the following errors:

ERROR: dey-examples-opengles-1.0-r0 do_package_qa: QA Issue: No GNU_HASH in the elf binary

and when cleaning:

ERROR: dey-examples-opengles-1.0-r0 do_configure: oe_runmake failed
| make: *** No rule to make target 'clean'.  Stop.

Signed-off-by: Diaz de Grenu, Jose <Jose.DiazdeGrenu@digi.com>

--- a/meta-digi-dey/recipes-digi/dey-examples/dey-examples-opengles/ccimx6/opengles/Makefile
+++ b/meta-digi-dey/recipes-digi/dey-examples/dey-examples-opengles/ccimx6/opengles/Makefile
@@ -15,13 +15,16 @@ endif
 
 all: $(BINARIES)
 
-es11_example: fsl_egl.o fslutil.o glu3.o
-	$(CC) $(CFLAGS) $^ -lm -lEGL -lGLESv1_CM $(X11LIBS) $@.c -o $@
+es11_example: es11_example.o fsl_egl.o fslutil.o glu3.o
+	$(CC) $(LDFLAGS) $^ -lm -lEGL -lGLESv1_CM $(X11LIBS) -o $@
 
-es20_example: fsl_egl.o fslutil.o
-	$(CC) $(CFLAGS) $^ -lm -lEGL -lGLESv2 $(X11LIBS) $@.c -o $@
+es20_example: es20_example.o fsl_egl.o fslutil.o
+	$(CC) $(LDFLAGS) $^ -lm -lEGL -lGLESv2 $(X11LIBS) -o $@
 
 install: $(BINARIES)
 	-mkdir -p $(DEST_DIR)/opt/dey-examples-opengles
 	install -m 0755 $^ $(DEST_DIR)/opt/dey-examples-opengles
 	install -m 0644 texture.bmp $(DEST_DIR)/opt/dey-examples-opengles
+
+clean:
+	-rm -f *.o $(BINARIES)
