--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -24,6 +24,7 @@ DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${POKY_DE
 # Removed DISTRO_FEATURES
 #   'wayland' -> not supported at the moment
 #   'ptest'   -> fails to build QT5 toolchain
+DISTRO_FEATURES_DEFAULT_remove = "3g nfc nfs zeroconf"
 POKY_DEFAULT_DISTRO_FEATURES_remove = "ptest wayland"
 
 GRAPHICAL_BACKEND = "${@bb.utils.contains('DISTRO_FEATURES', 'x11', 'x11', 'fb', d)}"
