networkmanager: do not manage any p2p interface
For P2P interfaces, some drivers (CC6UL) create auxiliar interfaces based
on the parent one, like p2p-p2p0-0.
This commit adds a p2p* pattern to the list of unmanaged devices so that
NetworkManager doesn't try to manage P2P devices.

https://jira.digi.com/browse/DEL-4649

Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-dey/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
+++ b/meta-digi-dey/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
@@ -6,4 +6,4 @@ no-auto-default=type:ethernet
 managed=false
 
 [keyfile]
-unmanaged-devices=interface-name:p2p0;interface-name:wlan1
+unmanaged-devices=interface-name:p2p*;interface-name:wlan1
