libsoc: add generic recipe to build from GIT
Also configure DEY to build the GIT version of libsoc.

https://jira.digi.com/browse/DEL-4816

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -57,6 +57,9 @@ PREFERRED_VERSION_linux-yocto_qemumips ?= "4.8%"
 PREFERRED_VERSION_linux-yocto_qemumips64 ?= "4.8%"
 PREFERRED_VERSION_linux-yocto_qemuppc ?= "4.8%"
 
+# Use git recipe for libsoc
+PREFERRED_VERSION_libsoc = "git"
+
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 
