libsoc: update board configuration files to fix pwm definitions
Signed-off-by: David Escalona <david.escalona@digi.com>

--- a/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6ulsbc/board.conf
+++ b/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6ulsbc/board.conf
@@ -24,9 +24,7 @@ DEFAULT_SPI_SS = 0
 [PWM]
 
 # PWM4 on GPIO board connector (pin 11).
-DEFAULT_PWM_CHIP = 0
-
-DEFAULT_PWM_SIGNAL = 0
+DEFAULT_PWM = 0,0
 
 [ADC]
 
