--- a/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6ulstarter/board.conf
+++ b/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6ulstarter/board.conf
@@ -24,9 +24,7 @@ DEFAULT_SPI_SS = 0
 [PWM]
 
 # PWM1 on Expansion connector (pin 27).
-DEFAULT_PWM_CHIP = 0
-
-DEFAULT_PWM_SIGNAL = 0
+DEFAULT_PWM = 0,0
 
 [ADC]
 
