--- a/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6sbc/board.conf
+++ b/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6sbc/board.conf
@@ -30,9 +30,7 @@ DEFAULT_SPI_SS = 0
 [PWM]
 
 # PWM1 on LCD board connector (pin 10).
-DEFAULT_PWM_CHIP = 0
-
-DEFAULT_PWM_SIGNAL = 0
+DEFAULT_PWM = 0,0
 
 [ADC]
 
