libsoc: update board configuration files to fix SPI definitions
Signed-off-by: David Escalona <david.escalona@digi.com>

--- a/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6sbc/board.conf
+++ b/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6sbc/board.conf
@@ -23,9 +23,7 @@ DEFAULT_I2C_BUS = 2
 [SPI]
 
 # SPI-1 on SPI board connector.
-DEFAULT_SPI_BUS = 0
-
-DEFAULT_SPI_SS = 0
+DEFAULT_SPI = 0,0
 
 [PWM]
 
