--- a/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6ulstarter/board.conf
+++ b/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6ulstarter/board.conf
@@ -17,9 +17,7 @@ DEFAULT_I2C_BUS = 1
 [SPI]
 
 # SPI-3 on Expansion connector.
-DEFAULT_SPI_BUS = 2
-
-DEFAULT_SPI_SS = 0
+DEFAULT_SPI = 2,0
 
 [PWM]
 
