--- a/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6ulsbc/board.conf
+++ b/meta-digi-dey/recipes-support/libsoc/libsoc-git/ccimx6ulsbc/board.conf
@@ -17,9 +17,7 @@ DEFAULT_I2C_BUS = 0
 [SPI]
 
 # SPI-1 on SPI board connector.
-DEFAULT_SPI_BUS = 0
-
-DEFAULT_SPI_SS = 0
+DEFAULT_SPI = 0,0
 
 [PWM]
 
