meta-digi-arm: add support for ccimx6qpsbc platform
Add initial support for Digi's ConnectCore 6 QuadPlus SBC.
The ccimx6qp platform has the QCA6564 chip instead of the
other Atheros chips and included the Atmel ECC508A cryptographic
chip.

https://jira.digi.com/browse/DEL-5082

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -5,6 +5,13 @@
 # Contains the ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
+# To be removed (rng-tools) once kernel 3.14 is deprecated
+MACHINE_EXTRA_RRECOMMENDS += "rng-tools"
+
+# Firmware
+MACHINE_FIRMWARE_append = " ${@base_conditional('HAVE_BT', '1' , 'firmware-atheros-ar3k', '', d)}"
+MACHINE_FIRMWARE_append = " ${@base_conditional('HAVE_WIFI', '1' , 'firmware-atheros-ath6kl', '', d)}"
+
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
 UBOOT_CONFIG ??= "ccimx6dlsbc512MB ccimx6dlsbc ccimx6qsbc2GB ccimx6qsbc512MB ccimx6qsbc"
