ccimx6qpsbc: added device tree for CC6PLUS non-wireless variant
Signed-off-by: Hector Palacios <hector.palacios@digi.com>

https://jira.digi.com/browse/DEL-5229

--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -23,6 +23,7 @@ UBOOT_CONFIG ??= "ccimx6qpsbc2GB"
 UBOOT_CONFIG[ccimx6qpsbc2GB] = "ccimx6qpsbc2GB_defconfig"
 
 KERNEL_DEVICETREE ?= " \
+    imx6qp-ccimx6qpsbc.dtb \
     imx6qp-ccimx6qpsbc-id160.dtb \
     imx6qp-ccimx6qpsbc-wb.dtb \
 "
