xf86-video-imxfb-vivante: Upgrade to 6.2.2.p0
https://jira.digi.com/browse/DEL-5234

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -14,6 +14,7 @@ MACHINE_FIRMWARE_append = " ${@base_conditional('HAVE_WIFI', '1' , 'firmware-ath
 
 PREFERRED_VERSION_imx-gpu-viv ?= "5.0.11.p8.6-hfp"
 PREFERRED_VERSION_kernel-module-imx-gpu-viv ?= "5.0.11.p8.6+fslc%"
+PREFERRED_VERSION_xf86-video-imxfb-vivante  ?= "5.0.11.p8.6"
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
