imx-gpu-g2d: move imx-gpu-g2d out of imx-gpu-viv v6
This commit re-adds the imx-gpu-g2d recipe that was removed
from the imx-gpu-viv v6 driver.

https://jira.digi.com/browse/DEL-5234

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -17,6 +17,8 @@ MACHINE_EXTRA_RRECOMMENDS += "cryptoauthlib"
 MACHINE_FIRMWARE_append = " ${@base_conditional('HAVE_BT', '1', 'firmware-qualcomm-qca6564-bt', '', d)}"
 MACHINE_FIRMWARE_append = " ${@base_conditional('HAVE_WIFI', '1', 'firmware-qualcomm-qca6564-wifi', '', d)}"
 
+PREFERRED_PROVIDER_virtual/libg2d_mx6 = "imx-gpu-g2d"
+
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
 UBOOT_CONFIG ??= "ccimx6qpsbc2GB"
