meta-digi: update support email address
Signed-off-by: Jose Diaz de Grenu <Jose.DiazdeGrenu@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -5,7 +5,7 @@ DISTRO_CODENAME = "morty"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'}"
 
-MAINTAINER = "Digi Support <support@digi.com>"
+MAINTAINER = "Digi Support <tech.support@digi.com>"
 
 TARGET_VENDOR = "-dey"
 
