rocko migration: linux: update ConnectCore6 to v4.9
Also update vivante driver and graphic components.

https://jira.digi.com/browse/DEL-5518

Signed-off-by: Jose Diaz de Grenu <Jose.DiazdeGrenu@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -12,9 +12,7 @@ MACHINE_EXTRA_RRECOMMENDS += "rng-tools"
 MACHINE_FIRMWARE_append = " ${@base_conditional('HAVE_BT', '1' , 'firmware-atheros-ar3k', '', d)}"
 MACHINE_FIRMWARE_append = " ${@base_conditional('HAVE_WIFI', '1' , 'firmware-atheros-ath6kl', '', d)}"
 
-PREFERRED_VERSION_imx-gpu-viv ?= "5.0.11.p8.6-hfp"
-PREFERRED_VERSION_kernel-module-imx-gpu-viv ?= "5.0.11.p8.6+fslc%"
-PREFERRED_VERSION_xf86-video-imxfb-vivante  ?= "5.0.11.p8.6"
+PREFERRED_PROVIDER_virtual/libg2d_mx6 = "imx-gpu-g2d"
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
