--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6sbc/board.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6sbc/board.conf
@@ -32,12 +32,5 @@ DEFAULT_PWM = 0,0
 
 [ADC]
 
-# HWMON Driver
-DEFAULT_ADC_DRIVER = 1
-
-# IIO Device 0
-DEFAULT_DEVICE_INDEX = 0
-
-# PMIC_ADCIN1 on GPIO board connector (Pin 1)
-DEFAULT_ADC_LINE = 1
-
+# ADC1 on GPIO connector (pin 1).
+DEFAULT_ADC = 0,1
