--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6ulsbc/board.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6ulsbc/board.conf
@@ -26,11 +26,5 @@ DEFAULT_PWM = 0,0
 
 [ADC]
 
-# IIO Driver
-DEFAULT_ADC_DRIVER = 0
-
-# IIO Device 0
-DEFAULT_DEVICE_INDEX = 0
-
 # ADC1_IN2 on GPIO board connector (pin 13)
-DEFAULT_ADC_LINE = 2
+DEFAULT_ADC = 0,2
