--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6ulstarter/board.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6ulstarter/board.conf
@@ -26,11 +26,5 @@ DEFAULT_PWM = 0,0
 
 [ADC]
 
-# IIO Driver
-DEFAULT_ADC_DRIVER = 0
-
-# IIO Device 1
-DEFAULT_DEVICE_INDEX = 1
-
 # ADC1_IN4 on Expansion connector (pin 7).
-DEFAULT_ADC_LINE = 4
+DEFAULT_ADC = 0,4
