--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -25,6 +25,9 @@ UBOOT_CONFIG[ccimx6qsbc2GB] = "ccimx6qsbc2GB_defconfig"
 UBOOT_CONFIG[ccimx6qsbc512MB] = "ccimx6qsbc512MB_defconfig"
 UBOOT_CONFIG[ccimx6qsbc] = "ccimx6qsbc_defconfig"
 
+# Use uImage for backwards compatibility
+KERNEL_IMAGETYPE = "uImage"
+
 KERNEL_DEVICETREE ?= " \
     imx6dl-ccimx6sbc.dtb \
     imx6dl-ccimx6sbc-w.dtb \
