ccimx6ulsbc: add support for SBC Pro board ID=136
Signed-off-by: Hector Palacios <hector.palacios@digi.com>

https://jira.digi.com/browse/DUB-769

--- a/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
@@ -24,6 +24,7 @@ KERNEL_DEVICETREE ?= " \
     imx6ul-ccimx6ulsbc.dtb \
     imx6ul-ccimx6ulsbc-wb.dtb \
     imx6ul-ccimx6ulsbc-id135.dtb \
+    imx6ul-ccimx6ulsbc-id136.dtb \
 "
 
 SERIAL_CONSOLES ?= "115200;ttymxc4"
