--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -51,6 +51,10 @@ PREFERRED_PROVIDER_jpeg_armv7a ?= "libjpeg-turbo"
 
 PREFERRED_VERSION_linux-yocto ?= "4.12%"
 
+# Some features (swupdate, environment encryption) depends on this specific
+# provider for u-boot-fw-tools
+PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils"
+
 # Use git recipe for libsoc
 PREFERRED_VERSION_libsoc = "git"
 
