--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -43,6 +43,11 @@ FEATURE_PACKAGES_dey-qt = "packagegroup-dey-qt"
 FEATURE_PACKAGES_dey-trustfence = "packagegroup-dey-trustfence"
 FEATURE_PACKAGES_dey-wireless = "packagegroup-dey-wireless"
 
+# Our layer only provides version 5.41, which we want to keep because
+# it was used for Bluetooth certification. However by default the newer
+# 5.46 version should be used, which is provided by the poky layer.
+PREFERRED_VERSION_bluez5 ?= "5.46"
+
 # Set the PREFERRED_PROVIDER for jpeg functionality based on the MACHINE
 # architecture.  For armv7a devices libjpeg-turbo should be used to take
 # advantage of the SIMD instructions.
