--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -15,6 +15,9 @@ LAYERDEPENDS_digi-arm = "core freescale-layer"
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
+# Additional license directories
+LICENSE_PATH += "${LAYERDIR}/custom-licenses"
+
 DIGI_LOG_GIT ?= "git://log-sln-git.digi.com/"
 DIGI_MTK_GIT ?= "git://stash.digi.com/"
 DIGI_GIT	 ?= "${DIGI_LOG_GIT}"
