recipes-digi: add cryptoauth-openssl-engine
https://jira.digi.com/browse/DEL-5592

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -11,7 +11,10 @@ WIRELESS_MODULE_append = " ${@base_conditional('HAVE_WIFI', '1', 'kernel-module-
 # Wireless p2p interface
 WLAN_P2P_INTERFACE ?= "p2p0"
 
-MACHINE_EXTRA_RRECOMMENDS += "cryptoauthlib"
+MACHINE_EXTRA_RRECOMMENDS += " \
+    cryptoauthlib \
+    cryptoauth-openssl-engine \
+"
 
 # Firmware
 MACHINE_FIRMWARE_append = " ${@base_conditional('HAVE_BT', '1', 'firmware-qualcomm-qca6564-bt', '', d)}"
