--- a/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
@@ -8,8 +8,8 @@ include conf/machine/include/ccimx6ul.inc
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
 UBOOT_CONFIG ??= "ccimx6ulsbc1GB ccimx6ulsbc"
-UBOOT_CONFIG[ccimx6ulsbc1GB] = "ccimx6ulsbc1GB_defconfig"
-UBOOT_CONFIG[ccimx6ulsbc] = "ccimx6ulsbc_defconfig"
+UBOOT_CONFIG[ccimx6ulsbc1GB] = "ccimx6ulsbc1GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+UBOOT_CONFIG[ccimx6ulsbc] = "ccimx6ulsbc_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
 # U-Boot environment offset (within partition)
 UBOOT_ENV_OFFSET ?= "0x0"
