linux-dey: add support for ConnectCore 8X SBC Express
- This is an AARCH64 platform that requires to build "Image", so let's
  change KERNEL_IMAGETYPE to a weak assignment in imx-digi-base.inc
- The device tree is inside a vendor folder.
- For the moment, this platform builds from a different branch.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

https://jira.digi.com/browse/DEL-5936

--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
@@ -26,7 +26,7 @@ UBOOT_CONFIG ??= "ccimx8x_sbc_express"
 UBOOT_CONFIG[ccimx8x_sbc_express] = "ccimx8x_sbc_express_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
 KERNEL_DEVICETREE ?= " \
-    ccimx8x-sbc-express.dtb \
+    digi/ccimx8x-sbc-express.dtb \
 "
 
 SERIAL_CONSOLES ?= "115200;ttyLP2"
