ccimx8x: add xwayland support
Also add gtk3+ and clutter demos that depend on wayland since they are also
included in NXP's images.

https://jira.digi.com/browse/DEL-6104

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -22,12 +22,13 @@ POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${POKY_DEFAULT_DISTRO_FEATURES}"
 
 # Removed DISTRO_FEATURES
-#   'wayland' -> not supported at the moment
+#   'wayland' -> only supported on the i.MX8 QXP
 #   'ptest'   -> fails to build QT5 toolchain
 DISTRO_FEATURES_DEFAULT_remove = "3g nfc nfs zeroconf"
 POKY_DEFAULT_DISTRO_FEATURES_remove = "ptest wayland"
 
-GRAPHICAL_BACKEND = "${@bb.utils.contains('DISTRO_FEATURES', 'x11', 'x11', 'fb', d)}"
+GRAPHICAL_BACKEND = "${@bb.utils.contains('DISTRO_FEATURES', 'x11 wayland', 'xwayland', \
+                        bb.utils.contains('DISTRO_FEATURES', 'x11', 'x11', 'fb', d), d)}"
 
 # Recovery initramfs image name.
 RECOVERY_INITRAMFS_IMAGE ?= "dey-image-recovery-initramfs"
