--- a/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
@@ -26,6 +26,10 @@ KERNEL_DEVICETREE ?= " \
     imx6ul-ccimx6ulsbc-id135.dtb \
     imx6ul-ccimx6ulsbc-id136.dtb \
 "
+KERNEL_DEVICETREE_use-mainline-bsp ?= "imx6ul-ccimx6ulsbcpro.dtb"
+
+KERNEL_DEFCONFIG ?= "arch/arm/configs/ccimx6ul_defconfig"
+KERNEL_DEFCONFIG_use-mainline-bsp ?= "arch/arm/configs/imx_v6_v7_defconfig"
 
 SERIAL_CONSOLES ?= "115200;ttymxc4"
 
