--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -25,6 +25,10 @@ KERNEL_DEVICETREE ?= " \
     imx6ul-ccimx6ulstarter-wb.dtb \
     imx6ul-ccimx6ulstarter-id129.dtb \
 "
+KERNEL_DEVICETREE_use-mainline-bsp ?= "imx6ul-ccimx6ulsbcexpress.dtb"
+
+KERNEL_DEFCONFIG ?= "arch/arm/configs/ccimx6ul_defconfig"
+KERNEL_DEFCONFIG_use-mainline-bsp ?= "arch/arm/configs/imx_v6_v7_defconfig"
 
 SERIAL_CONSOLES ?= "115200;ttymxc4"
 
