meta-digi-dey: update distro version to 2.4-r2-beta
Signed-off-by: Gonzalo Ruiz <Gonzalo.Ruiz@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,6 +1,6 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
-DISTRO_VERSION = "2.4-r1"
+DISTRO_VERSION = "2.4-r2-beta"
 DISTRO_CODENAME = "rocko"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'}"
