ccimx8_sbc_express: add device tree -id129
This is the same than the default -wb variant.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
@@ -27,6 +27,7 @@ UBOOT_CONFIG[ccimx8x_sbc_express2GB] = "ccimx8x_sbc_express2GB_defconfig,,u-boot
 UBOOT_CONFIG[ccimx8x_sbc_express1GB] = "ccimx8x_sbc_express1GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
 KERNEL_DEVICETREE ?= " \
+    digi/ccimx8x-sbc-express-id129.dtb \
     digi/ccimx8x-sbc-express-wb.dtb \
     digi/ccimx8x-sbc-express.dtb \
 "
