--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -11,6 +11,8 @@ BBFILE_PRIORITY_digi-arm = "5"
 
 LAYERDEPENDS_digi-arm = "core freescale-layer"
 
+LAYERSERIES_COMPAT_digi-arm = "sumo"
+
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
