libdigiapix: set MCA PWM1 (MCA_IO5) by default on CC8X
This PWM signal is available on the expansion connector
of both the SBC Express and SBC Pro.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-express/board.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-express/board.conf
@@ -21,8 +21,8 @@ DEFAULT_SPI = 32766,0
 
 [PWM]
 
-# TODO: PWM not currently supported
-DEFAULT_PWM = 0,0
+# MCA PWM1 channel 0 on Expansion connector (MCA_IO5)
+DEFAULT_PWM = 7,0
 
 [ADC]
 
