--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-pro/board.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-pro/board.conf
@@ -21,8 +21,8 @@ DEFAULT_SPI = 32766,0
 
 [PWM]
 
-# TODO: PWM not currently supported
-DEFAULT_PWM = 0,0
+# MCA PWM1 channel 0 on Expansion connector (MCA_IO5)
+DEFAULT_PWM = 7,0
 
 [ADC]
 
