thud migration: update meta-digi LAYERSERIES_COMPAT to indicate support with "thud" release
https://jira.digi.com/browse/DEL-6412

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILE_PRIORITY_digi-arm = "5"
 
 LAYERDEPENDS_digi-arm = "core freescale-layer"
 
-LAYERSERIES_COMPAT_digi-arm = "sumo"
+LAYERSERIES_COMPAT_digi-arm = "thud"
 
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
