--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -19,7 +19,7 @@ BBMASK += "meta-freescale/recipes-graphics/drm/libdrm_%.bbappend"
 LAYERDEPENDS_digi-dey  = "core digi-arm"
 LAYERDEPENDS_digi-dey += "openembedded-layer networking-layer webserver qt5-layer swupdate"
 
-LAYERSERIES_COMPAT_digi-dey = "sumo"
+LAYERSERIES_COMPAT_digi-dey = "thud"
 
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
