thud migration: default to use older Vulkan v1.0.65.2
Vulkan v1.1.73 fails building with spirv-tools

https://jira.digi.com/browse/DEL-6412

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -73,6 +73,9 @@ PREFERRED_VERSION_nativesdk-dtc ?= "1.4.5"
 # Use git recipe for libsoc
 PREFERRED_VERSION_libsoc = "git"
 
+# Gstreamer 1.14.0 requires a specific vulkan version.
+PREFERRED_VERSION_vulkan ?= "1.0.65%"
+
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 
