pulseaudio: generalize recipe and add support to MAX98089 sound card profile
Add pulseaudio audio profile for MAX98089 sound card and
generalize the recipe to support multiple platforms with
the same audio sound card.

https://jira.digi.com/browse/DEL-6461

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-dey/recipes-multimedia/pulseaudio/pulseaudio/hdmi/dey-audio-hdmi.conf
+++ b/meta-digi-dey/recipes-multimedia/pulseaudio/pulseaudio/hdmi/dey-audio-hdmi.conf
@@ -13,7 +13,7 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with PulseAudio; if not, see <http://www.gnu.org/licenses/>.
 
-; Audio profile for Digi ConnectCore 6 HDMI sound card
+; Audio profile for Digi ConnectCore HDMI sound card
 ;
 ; Copyright (C) 2017 by Digi International Inc.
 ;
