--- a/meta-digi-dey/recipes-multimedia/pulseaudio/pulseaudio/sgtl5000/dey-audio-sgtl5000.conf
+++ b/meta-digi-dey/recipes-multimedia/pulseaudio/pulseaudio/sgtl5000/dey-audio-sgtl5000.conf
@@ -13,7 +13,7 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with PulseAudio; if not, see <http://www.gnu.org/licenses/>.
 
-; Audio profile for Digi ConnectCore 6 SBC SGTL5000 sound card
+; Audio profile for Digi ConnectCore SGTL5000 sound card
 ;
 ; Copyright (C) 2017 by Digi International Inc.
 ;
