bluez: rework bluetooth and bluetooth-init services
Soften the dependencies between the services and start the bluetooth stack
regardless of the existence of a bluetooth chip. Also, update the standby
script to reflect that there is no longer a strong dependency between the
services.

https://jira.digi.com/browse/DEL-6452

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/recipes-connectivity/bluez/bluez5-5.41/bluetooth-init.service
+++ b/meta-digi-dey/recipes-connectivity/bluez/bluez5-5.41/bluetooth-init.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=Initialization of the bluetooth chip
+ConditionPathIsDirectory=/proc/device-tree/bluetooth
+Before=bluetooth.service
 
 [Service]
 Type=forking
@@ -7,4 +9,4 @@ ExecStart=/etc/bluetooth-init start
 ExecStop=/etc/bluetooth-init stop
 
 [Install]
-RequiredBy=bluetooth.service
+WantedBy=multi-user.target
