libdigiapix: add and fix GPIO aliases
For CC6/CC6Plus
 - Add USER_LED0 alias (same as default USER_LED)
 - Change aliases of the other LEDs to USER_LED1 and
   USER_LED2 (without additional underscore and fixed
   indexes, to match the board schematics)

For CC8X SBC Pro
 - Add USER_LED0 alias (same as default USER_LED)
 - Add USER_LED1 which was missing
 - Increase indexes (due to removed MCA_IO19 on SOM v3)

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6qpsbc/board.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6qpsbc/board.conf
@@ -5,12 +5,13 @@ model = Digi International ConnectCore 6 QuadPlus Single Board Computer.
 
 # USER LED (RED) - GPIO02_IO02
 USER_LED = 34
+USER_LED0 = 34
 
 # USER LED (ORANGE) - GPIO02_IO03
-USER_LED_2 = 35
+USER_LED1 = 35
 
 # USER LED (GREEN) - GPIO02_IO04
-USER_LED_3 = 36
+USER_LED2 = 36
 
 # USER BUTTON - GPIO02_IO05
 USER_BUTTON = 37
