--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-pro/board.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-pro/board.conf
@@ -4,10 +4,14 @@ model = Digi International ConnectCore 8X SBC Pro.
 [GPIO]
 
 # USER LED0 - MCA_IO18
-USER_LED = 222
+USER_LED = 223
+USER_LED0 = 223
+
+# USER_LED1 - MCA_IO10
+USER_LED1 = 215
 
 # USER BUTTON - MCA_IO05
-USER_BUTTON = 209
+USER_BUTTON = 210
 
 [I2C]
 
