libdigiapix: add ADC_IN0 as default DEFAULT_ADC for ccimx8x boards
ADC_IN0 is the channel 0 of iio:device0.

Signed-off-by: Gonzalo Ruiz <Gonzalo.Ruiz@digi.com>

--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-express/board.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx8x-sbc-express/board.conf
@@ -26,5 +26,5 @@ DEFAULT_PWM = 7,0
 
 [ADC]
 
-# TODO: only MCA ADCs are supported at the moment, with them being disabled by default
+# ADC_IN0 on Expansion connector
 DEFAULT_ADC = 0,0
